--- a/ui/style.css
+++ b/ui/style.css
@@ -1,38 +1,22 @@
-div{
-     border-radius: 5px;
+body {
+    font-family: verdana;
+    background-color: lightgrey;
+    margin-top: 75px;
 }
 
-#header{
-    z-index: 1;
-    position: fixed;
-    height: 60px;
-    width: 1350px;
-    background-color: #2c3e50;
-    
+.center {
+    text-align: center;
 }
 
-.right{
-     position: relative;
-     height: 400px;
-     width: 1120px;
-     float: right;
-     background-color: #AED6F1;
-     margin-top: 70px;
+.text-big {
+    font-size: 300%;
 }
 
-.left{
-     position: relative;
-     height: 400px;
-     width: 200px;
-     background-color: #E74C3C;
-     float: left;
-     margin-top: 10px;
+.bold {
+    font-weight: bold;
 }
 
-#footer{
-     position: relative;
-     height: 60px;
-     width: 1350px;
-     background-color: #2c3e50;
-     clear: both;
+.img-medium {
+    height: 200px;
 }
+
