--- a/ui/style.css
+++ b/ui/style.css
@@ -1,38 +1,89 @@
-div{
-     border-radius: 5px;
+div {
+	border-radius: 5px;
 }
 
-#header{
-    z-index: 1;
-    position: fixed;
-    height: 60px;
-    width: 1350px;
-    background-color: #2c3e50;
-    
+#header {
+	z-index: 1;
+	position: fixed;
+	width: 97.5%;
+	margin-top: -20px;
+	height: 60px;
+	background-color: #668284;
+	margin-bottom: 10px;
 }
 
-.right{
-     position: relative;
-     height: 400px;
-     width: 1120px;
-     float: right;
-     background-color: #AED6F1;
-     margin-top: 70px;
+#name {
+	float:left;
+	margin-left: 5px;
+	padding-top: 5px;
+	font-size: 16px;
+	font-family: Verdana, sans-serif;
+	color: #ffffff;
 }
 
-.left{
-     position: relative;
-     height: 400px;
-     width: 200px;
-     background-color: #E74C3C;
-     float: left;
-     margin-top: 70px;
+#email{
+	float:right;
+	margin-right: 5px;
+	padding-top: 5px;
+	font-size: 16px;
+	font-family: Verdana, sans-serif;
+	color: #ffffff;
 }
 
-#footer{
-     position: relative;
-     height: 60px;
-     width: 1350px;
-     background-color: #2c3e50;
-     clear: both;
+h4 {
+	margin-left: 5px;
+	margin-bottom: 15px;
+	font-family: Verdana, sans-serif;
+}
+
+.right p {
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-top: -10px;
+	font-family: Garamond, serif;
+	color: #000000;
+}
+
+li {
+	list-style-type: square;
+}
+
+a:hover {
+	font-weight: bold;
+}
+
+.left {
+	position: relative;
+	float: left;
+	margin-top: 50px;
+	width: 10%;
+	height: 400px;
+	background-color: #B9D7D9;
+	margin-bottom: 10px;
+}
+
+.right {
+	position: relative;
+	float: right;
+	margin-top: 50px;
+	width: 88%;
+	height: 400px;
+	background-color: #F4EBC3;
+	margin-bottom: 10px;
+}
+
+#footer {
+	position: relative;
+	height: 50px;
+	background-color: #668284;
+	clear: both;
+	font-family: Verdana, sans-serif;
+	font-size: 14px;
+	text-align: center;
+	color: #ffffff;
+}
+
+#footer p {
+	position: relative;
+	padding-top: 15px;
 }
