--- a/ui/style.css
+++ b/ui/style.css
@@ -50,6 +50,7 @@ li {
 
 a:hover {
 	font-weight: bold;
+	color: #000000;
 }
 
 .left {
@@ -57,7 +58,7 @@ a:hover {
 	float: left;
 	margin-top: 50px;
 	width: 10%;
-	height: 400px;
+	height: 600px;
 	background-color: #B9D7D9;
 	margin-bottom: 10px;
 }
@@ -67,12 +68,13 @@ a:hover {
 	float: right;
 	margin-top: 50px;
 	width: 88%;
-	height: 400px;
+	height: 600px;
 	background-color: #F4EBC3;
 	margin-bottom: 10px;
 }
 
 #footer {
+    z-index: -1;
 	position: relative;
 	height: 50px;
 	background-color: #668284;
