--- a/ui/style.css
+++ b/ui/style.css
@@ -12,7 +12,6 @@ div {
 	width: 97.5%;
 	margin-top: -20px;
 	height: 60px;
-	background-color: #668284;
 	margin-bottom: 10px;
 }
 
@@ -22,7 +21,7 @@ div {
 	padding-top: 5px;
 	font-size: 16px;
 	font-family: Verdana, sans-serif;
-	color: #ffffff;
+	color: #D0D3D4;
 }
 
 #email{
@@ -31,7 +30,7 @@ div {
 	padding-top: 5px;
 	font-size: 16px;
 	font-family: Verdana, sans-serif;
-	color: #ffffff;
+	color: #D0D3D4;
 }
 
 h4 {
@@ -45,7 +44,7 @@ h4 {
 	margin-right: 5px;
 	margin-top: -10px;
 	font-family: Garamond, serif;
-	color: #000000;
+	color: #D0D3D4;
 }
 
 li {
@@ -54,7 +53,7 @@ li {
 
 a:hover {
 	font-weight: bold;
-	color: #000000;
+	color: #D0D3D4;
 }
 
 .left {
@@ -63,7 +62,6 @@ a:hover {
 	margin-top: 50px;
 	width: 16%;
 	height: 600px;
-	background-color: #B9D7D9;
 	margin-bottom: 10px;
 }
 
@@ -73,7 +71,6 @@ a:hover {
 	margin-top: 50px;
 	width: 82%;
 	height: 600px;
-	background-color: #F4EBC3;
 	margin-bottom: 10px;
 }
 
@@ -81,12 +78,11 @@ a:hover {
     z-index: -1;
 	position: relative;
 	height: 50px;
-	background-color: #668284;
 	clear: both;
 	font-family: Verdana, sans-serif;
 	font-size: 14px;
 	text-align: center;
-	color: #ffffff;
+	color: #D0D3D4;
 }
 
 #footer p {
