--- a/ui/style.css
+++ b/ui/style.css
@@ -37,6 +37,7 @@ h4 {
 	margin-left: 5px;
 	margin-bottom: 15px;
 	font-family: Verdana, sans-serif;
+	font-size: 140px;
 }
 
 .right p {
@@ -44,6 +45,7 @@ h4 {
 	margin-right: 5px;
 	margin-top: -10px;
 	font-family: Garamond, serif;
+	font-size: 70px;
 	color: #D0D3D4;
 }
 
