--- a/ui/style.css
+++ b/ui/style.css
@@ -37,7 +37,7 @@ h4 {
 	margin-left: 5px;
 	margin-bottom: 15px;
 	font-family: Verdana, sans-serif;
-	
+	font-size: 140px;
 }
 
 .right p {
@@ -46,6 +46,7 @@ h4 {
 	margin-top: -10px;
 	font-family: Garamond, serif;
 	color: #D0D3D4;
+	font-size: 70px;
 }
 
 li {
