[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("http://i.imgur.com/CdVm4Mb.jpg");
+    background-image: url("http://www.noupe.com/wp-content/uploads/2009/10/twitter-patterns-3.jpg");
 }
 
 div {
