[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("http://www.noupe.com/wp-content/uploads/2009/10/twitter-patterns-3.jpg");
+    background-image: url("http://www.pixeden.com/media/k2/galleries/220/003-wood-melamine-subttle-pattern-background-pat.jpg");
 }
 
 div {
