--- a/ui/style.css
+++ b/ui/style.css
@@ -21,7 +21,7 @@ div {
 	padding-top: 5px;
 	font-size: 16px;
 	font-family: Verdana, sans-serif;
-	color: #D0D3D4;
+	color: #17202A;
 }
 
 #email{
@@ -30,7 +30,7 @@ div {
 	padding-top: 5px;
 	font-size: 16px;
 	font-family: Verdana, sans-serif;
-	color: #D0D3D4;
+	color: #17202A;
 }
 
 li {
@@ -39,7 +39,7 @@ li {
 
 a:hover {
 	font-weight: bold;
-	color: #D0D3D4;
+	color: #17202A;
 }
 
 .left {
@@ -48,7 +48,7 @@ a:hover {
 	margin-top: 50px;
 	width: 16%;
 	height: 600px;
-	color: #D0D3D4;
+	color: #17202A;
 	margin-bottom: 10px;
 }
 
@@ -60,7 +60,7 @@ a:hover {
 	font-family: Verdana, sans-serif;
 	font-size: 14px;
 	text-align: center;
-	color: #D0D3D4;
+	color: #17202A;
 }
 
 #footer p {
