[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,4 +1,4 @@
 body {
-    background-image: url("http://www.pixeden.com/media/k2/galleries/220/003-wood-melamine-subttle-pattern-background-pat.jpg");
+    background-image: url("file:///C:/Users/ankur%20sinha/Desktop/swirl_pattern.png");
 }
 
