[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,4 +1,4 @@
 body {
-    background-image: url("file:///C:/Users/ankur%20sinha/Desktop/swirl_pattern.png");
+    background-image: url("C:/Users/ankur%20sinha/Desktop/swirl_pattern.png");
 }
 
