[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,4 +1,4 @@
 body {
-    background-image: url("ui/swirl_pattern.png");
+    background-image: url("https://raw.githubusercontent.com/BittuSinha/imad-2016-app/master/ui/swirl_pattern.png");
 }
 
