--- a/ui/style.css
+++ b/ui/style.css
@@ -2,3 +2,9 @@ body {
     background-image: url("https://raw.githubusercontent.com/BittuSinha/imad-2016-app/master/ui/swirl_pattern.png");
 }
 
+h6 {
+    text-align: center;
+    font-size: 50px;
+    font-family: Verdana;
+    color: blue;
+}
